fix: numAssessments at using wrong value and carry assessment information in profile dto